--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/Payment/MarketPaymentView/MarketPaymentView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/Payment/MarketPaymentView/MarketPaymentView.xib
@@ -5,18 +5,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MarketPaymentView" customModule="PositionIn" customModuleProvider="target">
-            <connections>
-                <outlet property="iconImageView" destination="tUM-DO-NNb" id="HBN-l8-oSo"/>
-                <outlet property="itemNameLabel" destination="uhi-7k-iRj" id="PTq-4W-vWD"/>
-                <outlet property="pickUpAvailabilityLabel" destination="tNO-1b-O93" id="mzh-4y-oBa"/>
-                <outlet property="quintityLabel" destination="4Kv-yU-n2j" id="QCL-eX-ZVz"/>
-                <outlet property="subtotalLabel" destination="ewa-Xw-bGA" id="wZs-hT-jlm"/>
-                <outlet property="totalLabel" destination="n15-xP-gQo" id="Pee-bN-Lm5"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MarketPaymentView" customModule="PositionIn" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="9ag-rX-N3j">
+        <view contentMode="scaleToFill" id="9ag-rX-N3j" customClass="MarketPaymentView" customModule="PositionIn" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="361"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -251,6 +242,14 @@
                 <constraint firstItem="cRg-rN-7nD" firstAttribute="top" secondItem="YxJ-g4-0r0" secondAttribute="bottom" constant="8" id="xzt-ux-OUf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="iconImageView" destination="tUM-DO-NNb" id="NB5-UP-dVE"/>
+                <outlet property="itemNameLabel" destination="uhi-7k-iRj" id="jSc-Qk-6IM"/>
+                <outlet property="pickUpAvailabilityLabel" destination="tNO-1b-O93" id="hoa-hb-Zbp"/>
+                <outlet property="quintityLabel" destination="4Kv-yU-n2j" id="UVr-m2-IkQ"/>
+                <outlet property="subtotalLabel" destination="ewa-Xw-bGA" id="BkL-FJ-CwL"/>
+                <outlet property="totalLabel" destination="n15-xP-gQo" id="RTI-Xc-IYZ"/>
+            </connections>
             <point key="canvasLocation" x="500" y="288.5"/>
         </view>
     </objects>
