--- a/PositionIn/NewItems/NewItems.storyboard
+++ b/PositionIn/NewItems/NewItems.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--New Product-->
@@ -217,7 +217,7 @@
                             <constraint firstItem="Whe-I6-BEy" firstAttribute="leading" secondItem="U1x-jW-yDT" secondAttribute="leading" id="rgm-xs-gjO"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit profile" id="I2O-1Q-dsP">
+                    <navigationItem key="navigationItem" id="I2O-1Q-dsP">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="cjI-h2-n50">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
