--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -480,7 +480,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_market" translatesAutoresizingMaskIntoConstraints="NO" id="Y7E-rp-6gx" customClass="krfc">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="market_img_default" translatesAutoresizingMaskIntoConstraints="NO" id="Y7E-rp-6gx" customClass="krfc">
                                                     <rect key="frame" x="10" y="10" width="60" height="59"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="qvF-ZN-bS9"/>
@@ -1442,7 +1442,7 @@
     </scenes>
     <resources>
         <image name="SplashImage" width="320" height="568"/>
-        <image name="home_market" width="64" height="64"/>
+        <image name="market_img_default" width="375" height="172"/>
         <image name="newChat" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
